--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -19,8 +19,6 @@
      <ul>
       <li>The head element contains information about the webpage.</li>
       <li>The body element represents the visible content shown to the user.</li>
-      <li>I do not know what else to write in here and mostly I am just trying to get caught up and finish my prework. </li>
-     <li>I will come back and polish this later!</li>
      </ul>
 
       </section>
@@ -42,9 +40,10 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-     <ul>
-       <li>Enter your JavaScript notes here</li>
-     </ul>   
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+        </ul>
       </section>
     </main>
 
